# mydevtoolkit

./: .gitignore  LICENSE  README.md  mydevtoolkit.code-workspace  pyproject.toml
openspec/changes/catalog-instruction-system/: design.md  tasks.md
openspec/changes/shell-input-polish/: tasks.md
openspec/changes/skill-catalog-sync-system/: design.md  proposal.md  tasks.md
openspec/changes/workflow-event-tracking/: design.md  proposal.md  tasks.md
openspec/changes/workflow-status-command/: design.md  proposal.md  tasks.md
openspec/specs/activity-log/: spec.md
openspec/specs/catalog-item-model/: spec.md
openspec/specs/catalog-manifest/: spec.md
spec-backlog/: workflow-event-tracking.md
src/mdt/: __main__.py  workflow_event_cli.py
src/mydevtoolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/core/: test_catalog_commands.py  test_catalog_editor.py  test_catalog_installer.py  test_catalog_item.py  test_catalog_manifest.py  test_catalog_registration.py  test_catalog_registry.py  test_catalog_renderer.py  test_completion.py  test_context.py  test_dispatcher.py  test_exit_command.py  test_git_branch_command.py  test_help_command.py  test_history.py  test_managed_skills.py  test_openspec_branch_command.py  test_openspec_finish_command.py  test_registry.py  test_result.py  test_settings_theme_set_command.py  test_themes.py  test_workflow_history.py  test_workflow_record_command.py  test_workflow_status.py  test_workflow_status_command.py
tests/ui/: test_completion_input.py  test_shell_screen.py  test_theme_application.py
(+118 files in other folders)
