[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mydevtoolkit"
version = "0.1.0"
description = "MyDevToolkit interactive shell"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.60",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
mdt = "mdt.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

